--- a/eip-0021.md
+++ b/eip-0021.md
@@ -53,6 +53,7 @@ Proposed warning sign: [Material icons dangerous](https://fonts.google.com/icons
 | ------------------ |:----------------------------------------------------------------:| -----------:| ------
 | SigUSD             | 03faf2cb329f2e90d6d23b58d91bbb6c046aa143261cc21f52fbe2824bfcbf04 | yes         | sigmausd.io
 | SigRSV             | 003bd19d0187117f130b62e1bcab0939929ff5c7709f843c5c4dd158949285d0 | yes         | sigmausd.io
+| COMET              | 0cd8c9f416e5b1ca9f986a7f10a84191dfb85941619e49e53c0dc30ebf83324b | yes         | 
 
 ### Blocked tokens
 
